...
            android:hint="Item Description"
            android:ems="15"
            android:id="@+id/etDescription" />
            <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create"
            android:id="@+id/button" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
